--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   file_picker: ^6.1.1
   provider: ^6.1.2
   uuid: ^4.5.0
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
