--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  
   cupertino_icons: ^1.0.6
   animation_wrappers: ^3.0.0
   velocity_x: ^4.1.2
@@ -48,6 +49,7 @@ dependencies:
   uuid: ^4.5.0
   photo_view: ^0.15.0
   animated_bottom_navigation_bar: ^1.3.3
+  easy_stepper: ^0.8.5+1
 
 dev_dependencies:
   flutter_test:
